[workspace]
resolver = "2"
members = ["packages/*"]

[workspace.dependencies]
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_16"] }
gtk4-layer-shell = "0.4.0"
xdg = "2.5.2"
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
smol = "2.0.2"
zbus = "5.2.0"

ballad-services = { path = "packages/ballad-services" }
ballad-config = { path = "packages/ballad-config" }
ballad-search = { path = "packages/ballad-search" }
ballad-shell = { path = "packages/ballad-shell" }